--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href=""> <span class="bi bi-plus-circle"></span></a>
+                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -334,7 +334,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://www.instagram.com/"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -362,7 +362,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="#"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
