--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
           <!-- 3 -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/kk.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/lg.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/kk.jpg" alt="" class="img-fluid">
+                  <img src="assets/img/lg.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
