--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
             <!-- 4 -->
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/lg.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/ll.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="assets/img/lg.png" alt="" class="img-fluid">
+                  <img src="assets/img/ll.png" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
