--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">DANCING WEBSITE</h2>
+                    <h2 class="w-title">LOGIN AND REGISTRATION SYSTEM</h2>
                     <div class="w-more">
                       <span class="w-ctegory">HTML/CSS/BOOTSTRAP</span>
                       <p>
